Fixing some pmd violations